option java_package="com.alachisoft.ncache.protobuf";
option java_outer_classname="GetLCCommandProtocol";
package Alachisoft.NCache.Common.Protobuf;
message GetLCCommand {
	optional int64 requestId = 1;
	optional int32 opCode = 2;
	optional int32 editionId = 3;
}